# ProjectMilestoneExample

./: LICENSE  README.md  pyproject.toml  requirements.txt  train_model.py
dataset/: dataloader.py
model/: model.py
notebooks/: data_demo.ipynb
pm/: __init__.py  train_model.py
pm/dataset/: __init__.py  dataloader.py
pm/model/: __init__.py  model.py
