[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pm"
version = "0.1.0"
description = "Project Milestone Example package"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "torch",
    "torchvision",
    "pandas",
    "Pillow",
    "ipykernel",
    "jupyter",
    "notebook",
    "pytorch-lightning",
    "torchmetrics",
]

[tool.setuptools.packages.find]
include = ["pm*"]

